# amaali7.github.io

./: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.config.js
src/: main.rs
src/lib/: mod.rs
src/lib/components/: mod.rs  navbar.rs
src/lib/routes/: about.rs  home.rs  mod.rs
src/lib/routes/nix/: mod.rs
src/lib/routes/rust/: mod.rs
src/lib/utils/: errors.rs  json.rs  mod.rs
