[package]
name = "template"
version = "0.1.0"
authors = ["Abdallah Ali <amaali1991@gmail.com>"]
edition = "2021"

[lib]
name = "ui"
path = "src/lib/mod.rs"

[build-dependencies]
cc="*"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }

tree-sitter = "0.24.3"
tree-sitter-rust = "0.23"
tree-sitter-nix = "0.0.1"
tree-sitter-bash = "0.23.1"

# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"

# Markdown
pulldown-cmark = "0.12.1"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = [ "derive" ] }
reqwest = { version = "0.12.8", features = ["json"] }
async-recursion = "1.1.1"
futures = "0.3.31"
